css: Fix focus outline and prevent scrollbar overlap in modal.
Fixes #32950

--- a/web/styles/modal.css
+++ b/web/styles/modal.css
@@ -491,6 +491,8 @@
                 display: flex;
                 align-items: center;
                 gap: 10px;
+                /* to prevent overlapping of scrollbar and delete buttons */
+                margin-right: 16px;
 
                 .drag-icon {
                     color: hsl(0deg 0% 75%);
